--- a/src/directives/promise-default.tpl.html
+++ b/src/directives/promise-default.tpl.html
@@ -1,3 +1,5 @@
 <span ng-transclude ng-switch-default></span>
 <i class="fa fa-circle-o-notch icon-spin" ng-switch-when="loading"></i>
+<i class="fa fa-circle-o-notch icon-spin" ng-switch-when="intermediate"></i>
 <i class="fa fa-check" ng-switch-when="done"></i>
+<i class="fa fa-times" ng-switch-when="failed"></i>
