Updated promise-default directive to use when-promise.

--- a/src/directives/promise-default.tpl.html
+++ b/src/directives/promise-default.tpl.html
@@ -1,5 +1,5 @@
-<span ng-transclude ng-switch-default></span>
-<i class="fa fa-circle-o-notch icon-spin" ng-switch-when="loading"></i>
-<i class="fa fa-circle-o-notch icon-spin" ng-switch-when="intermediate"></i>
-<i class="fa fa-check" ng-switch-when="done"></i>
-<i class="fa fa-times" ng-switch-when="failed"></i>
+<span ng-transclude when-promise="idle"></span>
+<i class="fa fa-circle-o-notch icon-spin" when-promise="loading"></i>
+<i class="fa fa-circle-o-notch icon-spin" when-promise="intermediate"></i>
+<i class="fa fa-check" when-promise="done"></i>
+<i class="fa fa-times" when-promise="failed"></i>
