--- a/src/directives/promise-default.tpl.html
+++ b/src/directives/promise-default.tpl.html
@@ -1,5 +1,4 @@
 <span ng-transclude when-promise="idle"></span>
-<i class="fa fa-circle-o-notch icon-spin" when-promise="loading"></i>
-<i class="fa fa-circle-o-notch icon-spin" when-promise="intermediate"></i>
+<i class="fa fa-refresh fa-spin" when-progress></i>
 <i class="fa fa-check" when-promise="done"></i>
 <i class="fa fa-times" when-promise="failed"></i>
